--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <div class="container">
         <div class="card"> 
             <div class="avatar-container">
-                <img src="https://github.com/iliorServer7891/-/blob/d6f3a1b916db0296203ff321231fe82c433e27a6/ava.png" alt="pfp was stolen" class="avatar">
+                <img src="https://raw.githubusercontent.com/iliorServer7891/-/refs/heads/main/ava.png" alt="pfp was stolen" class="avatar">
             </div>
             
             <div class="profile-content">
