--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="frembl-bio">
     <meta name="keywords" content="bio, био страница, личная страница, профиль">
-    <link rel="icon" href="https://raw.githubusercontent.com/iliorServer7891/-/refs/heads/main/ыыы.png" type="image/png">
+    <link rel="icon" href="https://пошел.нахуй/" type="image/png">
     <title>frembl-bio</title>
     <style>
         :root {
@@ -247,7 +247,7 @@
                 opacity: 0;
             }
         }
-
+        
         @keyframes pulse {
             0% { transform: scale(1); }
             50% { transform: scale(1.05); }
@@ -381,7 +381,7 @@ Birthday:
     <div class="panel info-panel" id="infoPanel">
         <p>
             Telegram: <a href="https://frembl.t.me/" target="_blank">frembl</a><br>
-            Channel: <a href="https:// fremb1.t.me/" target="_blank">fremb1</a><br>
+            Channel: <a href="https://t.me/fremb1" target="_blank">fremb1</a><br>
             GitHub: <a href="https://github.com/iliorServer7891" target="_blank">ilior</a>
         </p>
     </div>
@@ -430,6 +430,7 @@ Birthday:
             bioContainer.classList.toggle('active');
         }
 
+        // New animated header logic
         const originalHeadingText = "dd if=/dev/frembl to=/dev/null";
         const animatedHeadingElement = document.getElementById('animatedHeading');
         let currentHeading = originalHeadingText;
@@ -446,7 +447,7 @@ Birthday:
         }
 
         function animateHeading() {
-            let direction = 'remove';
+            let direction = 'remove'; // Start by removing
             let charIndex = originalHeadingText.length;
 
             animationInterval = setInterval(() => {
@@ -457,6 +458,7 @@ Birthday:
                     } else {
                         direction = 'add';
                         clearInterval(animationInterval);
+                        // Start heart animation
                         const heartContainer = document.createElement('div');
                         heartContainer.classList.add('heart-animation-container');
                         document.body.appendChild(heartContainer);
@@ -478,7 +480,7 @@ Birthday:
                                     direction = 'add';
                                     charIndex = 0;
                                     currentHeading = '';
-                                    animateHeading();	
+                                    animateHeading();
                                 }, 1000);
                             }
                         }, 200);
