--- a/pidoras/index.html
+++ b/pidoras/index.html
@@ -17,7 +17,7 @@
         }
         
         body {
-            background-image: url("https://i.ibb.co/DDWv9rcR/1000043354.png");
+            background-image: url("https://raw.githubusercontent.com/iliorServer7891/-/refs/heads/main/pidoras.png");
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
